applications/software/home1/scrutiny/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrutiny
  namespace: scrutiny
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: scrutiny
