applications/software/home1/scrutiny/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy
spec:
  endpointSelector:
    matchLabels:
      app: scrutiny
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: authentik
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEntities:
    - world
